<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_fav_movie"
        android:icon="@drawable/ic_movies_black"
        android:title="@string/tab_text_1" />

    <item
        android:id="@+id/navigation_fav_tv"
        android:icon="@drawable/ic_tv_black"
        android:title="@string/tab_text_2" />

</menu>
